; ModuleID = '/home/carl/AnghaBench/Quake-III-Arena/code/win32/extr_win_glimp.c_GLimp_WakeRenderer.c'
source_filename = "/home/carl/AnghaBench/Quake-III-Arena/code/win32/extr_win_glimp.c_GLimp_WakeRenderer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@smpData = common dso_local global i8* null, align 8
@glw_state = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4
@wglErrors = common dso_local global i32 0, align 4
@renderCommandsEvent = common dso_local global i32 0, align 4
@renderActiveEvent = common dso_local global i32 0, align 4
@INFINITE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @GLimp_WakeRenderer(i8* %0) #0 {
  %2 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %3 = load i8*, i8** %2, align 8
  store i8* %3, i8** @smpData, align 8
  %4 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @glw_state, i32 0, i32 0), align 4
  %5 = call i32 @qwglMakeCurrent(i32 %4, i32* null)
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %10, label %7

7:                                                ; preds = %1
  %8 = load i32, i32* @wglErrors, align 4
  %9 = add nsw i32 %8, 1
  store i32 %9, i32* @wglErrors, align 4
  br label %10

10:                                               ; preds = %7, %1
  %11 = load i32, i32* @renderCommandsEvent, align 4
  %12 = call i32 @SetEvent(i32 %11)
  %13 = load i32, i32* @renderActiveEvent, align 4
  %14 = load i32, i32* @INFINITE, align 4
  %15 = call i32 @WaitForSingleObject(i32 %13, i32 %14)
  ret void
}

declare dso_local i32 @qwglMakeCurrent(i32, i32*) #1

declare dso_local i32 @SetEvent(i32) #1

declare dso_local i32 @WaitForSingleObject(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
